@@ -17,6 +17,11 @@ public interface QueryList<T> {
 
     /**
      * Get the total size of this list.
+     *
+     * <p>
+     * For any given {@link QueryList} instance, this method is expected to return a the same value if invoked multiple times.
+     * Therefore, callers may safely choose to invoke it only once on a given instance and cache the result.
+     * </p>
      */
     long size();
 
